# python-cloudhub-explorer-api

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: create-app.yml  deploy.yml
application-source/: alembic.ini  cleanup_db.py  pyproject.toml
application-source/alembic/: env.py  script.py.mako
application-source/alembic/versions/: 20260504_01_add_accounts_expires_at.py  20260504_02_backfill_mega_refresh_token.py  20260504_03_normalize_mega_access_token_email.py
application-source/app/: __init__.py  main.py
application-source/app/api/routes/: accounts.py  auth.py  files.py  images.py  video.py
application-source/app/core/: __init__.py  config.py  dependencies.py  security.py
application-source/app/db/: init_db.py  models.py  schemas.py  session.py
application-source/app/services/: __init__.py  account_service.py  background_service.py  file_cache.py  gdrive_service.py  library_service.py  mega_service.py  thumbnail_service.py
application-source/app/utils/: file_utils.py  folder_merger.py  resource_manager.py
application-source/postman/: cloudhub-explorer-api.collection.json
application-source/scratch/: test_priority.py  test_tracking.py
application-source/tests/: __init__.py  conftest.py  test_account_service.py  test_accounts.py  test_auth.py  test_auth_route.py  test_core.py  test_files.py  test_files_route.py  test_folder_merger.py  test_library_service.py  test_mega_service.py  test_resource_manager.py  test_services.py  test_thumbnail_service.py  test_utils.py  test_video_route.py
application-source/tests/integration/: test_main.py
application-source/tests/integration/api/: test_accounts_route.py  test_auth_route.py  test_files_route.py  test_images_route.py  test_video_route.py
application-source/tests/unit/core/: test_dependencies.py  test_security.py
application-source/tests/unit/db/: test_init_db.py  test_session.py
application-source/tests/unit/services/: test_account_service.py  test_background_service.py  test_file_cache.py  test_gdrive_service.py  test_library_service.py  test_mega_service.py  test_thumbnail_service.py
application-source/tests/unit/utils/: test_file_utils.py  test_folder_merger.py  test_resource_manager.py
cmd/: _cloudhub_explorer_api.bat  run.cmd
codebuild/: app.manifest.json  create_app.sh
